# TakeHomeTestGenerator

./: .env.example  .gitignore  IMPLEMENTATION.md  PROJECT_STATUS.md  Productspec.md  README.md  TROUBLESHOOTING.md  package-lock.json  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  run.sh
backend/: config.py  main.py
backend/api/: dependencies.py  routes.py  schemas.py
backend/clients/: gemini_client.py
backend/core/: generator.py  prompts.py  quality_gates.py
backend/tests/: test_generator.py
backend/tests/fixtures/: sample_job_description.py
backend/utils/: logger.py
docs/: QUICKSTART.md
frontend/: .env.demo  .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  demoData.ts
frontend/src/components/: InputForm.tsx  LoadingState.tsx  OutputDisplay.tsx
frontend/src/types/: assignment.ts
scripts/: generate_sample.py
